# ChangeLog for net-dialup/eagle-usb
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/eagle-usb/Attic/ChangeLog,v 1.11 2007/05/02 00:20:19 genone Exp $

  02 May 2007; Marius Mauch <genone@gentoo.org> eagle-usb-2.3.3.ebuild:
  Replacing einfo with ewarn/eerror

  25 Feb 2007; <genstef@gentoo.org> eagle-usb-2.3.3.ebuild:
  use KV_DIR only after linux-mod_pkg_setup, bug 168051

  30 Apr 2006; Alin Nastac <mrness@gentoo.org>
  -files/eagle-usb-2.3.2-kernel-2.6.14.patch, -eagle-usb-2.3.2.ebuild,
  eagle-usb-2.3.3.ebuild:
  Advise users with kernel >= 2.6.16 to use the driver available in their
  kernel and instruct them to install net-dialup/ueagle-atm instead.

  26 Mar 2006; Alin Nastac <mrness@gentoo.org> eagle-usb-2.3.2.ebuild,
  eagle-usb-2.3.3.ebuild:
  Bail out in pkg_setup if kernel version is >=2.6.16. This kernel version
  contains a driver for eagle-usb ADSL modems (#127528).

*eagle-usb-2.3.3 (12 Mar 2006)

  12 Mar 2006; Alin Nastac <mrness@gentoo.org>
  -files/eagle-usb-2.3.1-kernel-2.6.14.patch,
  +files/eagle-usb-2.3.3-kernel-2.6.14.patch, -eagle-usb-2.3.1-r1.ebuild,
  eagle-usb-2.3.2.ebuild, +eagle-usb-2.3.3.ebuild:
  Remove old version. Quote strings containing env vars. Version bump.

*eagle-usb-2.3.2 (14 Dec 2005)

  14 Dec 2005; Alin Nastac <mrness@gentoo.org>
  +files/eagle-usb-2.3.2-kernel-2.6.14.patch, files/confd, files/initd,
  -eagle-usb-2.1.1.ebuild, -eagle-usb-2.3.1.ebuild, +eagle-usb-2.3.2.ebuild:
  Remove obsolete versions. Correct DSP variable in /etc/conf.d/eagle-usb and
  create /dev/ppp device in /etc/init.d/eagle-usb (#97248). Version bump
  (#115179).

*eagle-usb-2.3.1-r1 (04 Nov 2005)

  04 Nov 2005; Alin Nastac <mrness@gentoo.org>
  +files/eagle-usb-2.3.1-kernel-2.6.14.patch, +eagle-usb-2.3.1-r1.ebuild:
  Add patch for fixing compilation issues on kernels >= 2.6.14 (#111396).

*eagle-usb-2.3.1 (03 May 2005)
