@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/Attic/asterisk-1.2.21.1.ebuild,v 1.4 2007/07/17 19:57:54 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/Attic/asterisk-1.2.21.1.ebuild,v 1.5 2007/10/28 13:25:43 phreak Exp $
 
 inherit eutils multilib toolchain-funcs
 
@@ -49,7 +49,8 @@ RDEPEND="dev-libs/newt
 DEPEND="${RDEPEND}
 	sys-devel/flex
 	sys-devel/bison
-	doc? ( app-doc/doxygen )"
+	doc? ( app-doc/doxygen )
+	virtual/logger"
 
 #asterisk uses special mpg123 functions and does not work with mpeg321, bug #42703
 PDEPEND="|| ( media-sound/mpg123 net-misc/asterisk-addons )"
