@@ -1,6 +1,14 @@
 # ChangeLog for net-misc/asterisk
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/ChangeLog,v 1.171 2007/09/10 16:54:09 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/ChangeLog,v 1.172 2007/10/28 13:25:43 phreak Exp $
+
+  28 Oct 2007; Christian Heim <phreak@gentoo.org> asterisk-1.0.12-r2.ebuild,
+  asterisk-1.2.13.ebuild, asterisk-1.2.13-r1.ebuild, asterisk-1.2.14.ebuild,
+  asterisk-1.2.14-r1.ebuild, asterisk-1.2.14-r2.ebuild,
+  asterisk-1.2.17.ebuild, asterisk-1.2.17-r1.ebuild,
+  asterisk-1.2.21.1.ebuild, asterisk-1.2.21.1-r1.ebuild:
+  Include virtual/logger in RDEPEND, as the initscript already specifies 'need
+  logger'.
 
   10 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
   asterisk-1.2.17-r1.ebuild, asterisk-1.2.21.1-r1.ebuild:
